[package]
name = "beacon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gumdrop = "0.8.1"
png = "0.17.11"
sdl2 = "0.36.0"
lazy_static = "1.4.0"
rand = { version = "0.8.5", features = ["small_rng"] }
